[module generator] Use java.nio.file.Path instead of java.io.File + fix unit tests